--- a/conf/keys/readme
+++ b/conf/keys/readme
@@ -17,3 +17,6 @@ openssl rsa -in client.key -pubout -out client.pem
 
 openssl req -new -key client.key -out client.csr
 openssl x509 -req -CA ca.crt -extfile sample.ext -CAkey ca.key -CAcreateserial -in client.csr -out client.crt
+
+openssl x509 -outform der -in rsacert.crt -out rsacert.der
+openssl pkcs12 -export -out p.p12 -inkey private.pem -in rsacert.crt
